--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -3,7 +3,14 @@ on:
   push:
     branches:
       - master
+    tags:
+      - v*
   workflow_dispatch:
+    inputs:
+      version:
+        type: string
+        required: false
+        description: Version to publish docs for
 jobs:
   deploy:
     name: Deploy Pages branch
@@ -19,9 +26,28 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: docgen
-      - uses: s0/git-publish-subdir-action@develop
-        env:
-          REPO: self
-          BRANCH: gh-pages
-          FOLDER: build/docgen
-          GITHUB_TOKEN: ${{ github.token }}
+      - name: Upload docgen folder
+        uses: actions/upload-artifact@v3
+        with:
+          name: docgen
+          path: build/docgen
+      - uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+      - name: Download docgen folder as latest
+        uses: actions/download-artifact@v3
+        with:
+          name: docgen
+          path: latest
+      - name: Add version from tag
+        if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
+        run: python update_versions.py ref "${{ github.ref }}"
+      - name: Add version from workflow dispatch
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
+        run: python update_versions.py version "${{ github.event.inputs.version }}"
+      - name: Commit changes
+        run: |
+          git add .
+          git commit -m "Update docs from $GITHUB_REF"
+          git push
+
