--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -41,15 +41,15 @@ jobs:
           path: latest
       - name: Add version from tag
         if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
-        run: python update_versions.py ref "${{ github.ref }}"
+        run: python _scripts/update_versions.py ref "${{ github.ref }}"
       - name: Add version from workflow dispatch
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
-        run: python update_versions.py version "${{ github.event.inputs.version }}"
+        run: python _scripts/update_versions.py version "${{ github.event.inputs.version }}"
       - name: Commit changes
         run: |
           git config user.name "Documentation Generation Bot"
           git config user.email "noreply@github.com"
           git add .
-          git commit -m "Update docs from $GITHUB_REF"
+          git diff-index --quiet HEAD || git commit -m "Update docs from $GITHUB_REF"
           git push
 
