--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
           distribution: "temurin"
           java-version: "17"
       - uses: actions/checkout@v3
+      - run: chmod +x ./gradlew
       - name: Build JARs for publishing
         uses: gradle/gradle-build-action@v2
         with:
@@ -57,6 +58,7 @@ jobs:
           distribution: "temurin"
           java-version: "17"
       - uses: actions/checkout@v3
+      - run: chmod +x ./gradlew
       - uses: gradle/gradle-build-action@v2
       - uses: actions/download-artifact@v3
         with:
