--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -3,8 +3,7 @@ on:
   push:
     branches:
       - master
-    tags:
-      - v*
+  release:
   workflow_dispatch:
     inputs:
       version:
@@ -42,11 +41,11 @@ jobs:
       - name: Update latest version
         run: python _scripts/update_versions.py latest
       - name: Add version from tag
-        if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
-        run: python _scripts/update_versions.py ref "${{ github.ref }}"
+        if: ${{ github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v') }}
+        run: python _scripts/update_versions.py ref "${{ github.ref }}" "${{ github.sha }}"
       - name: Add version from workflow dispatch
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
-        run: python _scripts/update_versions.py version "${{ github.event.inputs.version }}"
+        run: python _scripts/update_versions.py version "${{ github.event.inputs.version }}" "${{ github.sha }}"
       - name: Commit changes
         run: |
           git config user.name "Documentation Generation Bot"
