--- a/.github/workflows/build-pages.yml
+++ b/.github/workflows/build-pages.yml
@@ -39,13 +39,13 @@ jobs:
           name: docgen
           path: latest
       - name: Update latest version
-        run: python _scripts/update_versions.py latest
+        run: python _scripts/update_versions.py latest "${{ github.sha }}"
       - name: Add version from tag
         if: ${{ github.event_name == 'release' && startsWith(github.ref, 'refs/tags/v') }}
-        run: python _scripts/update_versions.py ref "${{ github.ref }}" "${{ github.sha }}"
+        run: python _scripts/update_versions.py ref "${{ github.ref }}"
       - name: Add version from workflow dispatch
         if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.version != '' }}
-        run: python _scripts/update_versions.py version "${{ github.event.inputs.version }}" "${{ github.sha }}"
+        run: python _scripts/update_versions.py version "${{ github.event.inputs.version }}"
       - name: Commit changes
         run: |
           git config user.name "Documentation Generation Bot"
