--- a/src/main/resources/assets/hexbound/lang/zh_cn.flatten.json5
+++ b/src/main/resources/assets/hexbound/lang/zh_cn.flatten.json5
@@ -168,7 +168,7 @@
         casting: {
             figments: {
                 title: "虚意识",
-                "1": "我之前对相关学说的所有研究都表明，$(hex)咒术$()的施放必须要有一个存在于$(i)世界$()上的、实在的施法者。\
+                "1": "我之前对相关学说的所有研究都表明，$(hex)咒术$()的施放必须要有一个存在于$(italic)世界$()上的、实在的施法者。\
 |                     显而易见的是，之前所有的$(hex)咒术$()都是由我施放的，满足上述要求。但如果\
 |                     我最终找到了$(l:hexcasting:greatwork/spellcircle)某些独立于施法者的施法方式$()（或者改装一下发射器使其能甩动缀品也行），\
 |                     它们会在我跨过前往其他维度的传送门时断开连接并停止工作。",
