--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ paucal = "0.5.0"
 hexcasting = "0.10.3"
 cca = "5.0.2"
 
-hexal = "X3IVGPTv"
+hexal = "3iO9Ze7h"
 
 fake-player = "0.5.0"
 mixin-extras = "0.1.0"
