--- a/src/main/resources/assets/hexbound/lang/zh_cn.flatten.json5
+++ b/src/main/resources/assets/hexbound/lang/zh_cn.flatten.json5
@@ -41,10 +41,18 @@
                 "load": "回想染色剂",
                 "delete": "遗忘染色剂"
             },
+            "create_shield/": {
+                "normal": "咒术护盾",
+                "glitchy": "不稳定咒术护盾"
+            },
             set_fake_impetus_player: "绑定虚意识",
             "pattern/": {
                 rotate: "旋转之馏化",
-                merge: "画家之馏化"
+                merge: "画家之馏化",
+                head: "起笔之馏化",
+                tail: "收笔之馏化",
+                line_count: "片段之纯化",
+                start_dir: "缠转之纯化"
             },
             construct_get_self: "自动机之精思",
             "give_command/": {
@@ -142,7 +150,8 @@
     entity: {
         hexbound: {
             spider_construct: "蛛形组构体",
-            robot_construct: "机械组构体"
+            robot_construct: "机械组构体",
+            shield: "咒术护盾"
         }
     },
     "item.hexbound": {
@@ -157,39 +166,42 @@
         construct_broadcaster: "组构体广播台"
     },
     "itemGroup.hexbound.hexbound_group": "咒法组构学",
+    "effect.hexbound": {
+        reduced_ambit: "事件视界"
+    },
     "hexbound.book": {
         "category.constructs": {
             title: "组构体",
-            desc: "这一章节的图案使我能操控组构体，也即能执行我的指令的机器人。它们甚至还能自行施放只有它们才能施放的$(hex)咒术$()。"
+            desc: "这一章节的图案使我能操控组构体（也即能执行指令的机器人）。它们甚至还能自行施放只有它们才能用的$(hex)咒术$()。"
         },
         "basics.hexbound_exists": {
             title: "咒法组构学",
-            "1": "我发现了$(hex)咒法学$()的另一分支领域——$(hex)咒法组构学$()。这块领域主要研究以媒质构建和控制某种自动机（称“组构体”）的方法，对物品的操控，等等。\
+            "1": "我发现了$(hex)咒法学$()的另一分支领域——$(hex)咒法组构学$()。这一领域主要研究以媒质构建和控制某种自动机（称“组构体”）的方法，对物品的操控，等等。\
 |                 我也会像之前的研究一样，在这本笔记里记录我的发现。"
         },
         casting: {
             figments: {
                 title: "虚意识",
                 "1": "我之前对相关学说的所有研究都表明，$(hex)咒术$()的施放必须要有一个存在于$(o)世界$()上的、实在的施法者。\
-|                     显而易见的是，之前所有的$(hex)咒术$()都是由我施放的，满足上述要求。但如果\
-|                     我最终找到了$(l:hexcasting:greatwork/spellcircle)某些独立于施法者的施法方式$()（或者改装一下发射器使其能甩动缀品也行），\
-|                     它们会在我跨过前往其他维度的传送门时断开连接并停止工作。",
+|                     显然，之前所有的$(hex)咒术$()都是由我施放的，满足上述要求。但就算\
+|                     最终找到了$(l:hexcasting:greatwork/spellcircle)某些独立于施法者的施法方式$()（或者改装一下发射器让它能甩动缀品说不定也行），\
+|                     它们也会在我跨过前往其他维度的传送门时断开连接并停止工作。",
                 "2": "然而，我一直坚信存在一种设计精妙的$(media)媒质$()网络，它能“骗过”$(hex)咒术$()，并使其锁存在网络中直至施放完毕。\
 |                     我叫这些网络“虚意识”。它们要么在功能上有很多限制（如组构体），要么需要\
 |                     有更为精妙的外界事物领着它们施放$(hex)咒术$()（大致是这样）。$(br)\
 |                     此外，虚意识并没有自我意识：意识之精思只会返回 $(l:hexcasting:casting/influences)$(thing)Null$()，\
-|                     而$(l:hexcasting:patterns/spells/sentinels)哨卫$()还有$(thing)$(l:hexcasting:items/pigments)染色剂$()则不会工作。"
+|                     $(l:hexcasting:patterns/spells/sentinels)哨卫$()还有$(thing)$(l:hexcasting:items/pigments)染色剂$()则不会工作。"
             },
             item_iotas: {
                 title: "物品 Iotas",
                 "1": "我发现了可供操控的两种全新的 iota 类型。$(br2)\
-|                     物品 iota 代表一个不包含额外属性的物品，如耐久度损耗和魔咒就不包含在内。$(br2)\
+|                     物品 iota 代表一个不包含额外属性的物品，如耐久度和魔咒就不包含在内。$(br2)\
 |                     物品组 iota 代表一组任意个物品，包含物品数量、名称、魔咒等，并以其在物品栏时的格式表现。",
                 "2": "但似乎代表着存有物品组 iota 的核心的物品组 iota 会出些错误。看来我自己的意识和思维深度也有些限制。"
             },
             hexbound_mishaps: {
                 title: "咒法组构学事故",
-                "1": "$(hex)咒法学$()的全新研究方向也带来了引人兴奋的全新施放$(hex)咒术$()失败的方式。以下是我目前发现的几种。",
+                "1": "$(hex)咒法学$()的全新研究方向也带来了振奋人心的全新施放$(hex)咒术$()失败的方式。以下是我目前发现的几种。",
                 construct: {
                     no_construct: {
                         title: "非组构体绘制",
@@ -224,13 +236,13 @@
             title: "促动石用虚意识",
             "1": "如今我已有控制意识的能力，我又读了一遍有关$(l:hexbound:patterns/great_spells/impetus_fake_player)绑定虚意识$()的笔记，并确认了$(l:hexcasting:greatwork/impetuses)牧师促动石$()是虚意识的极佳容器。\
 |                 该促动石需绑定至一个和我一样已受$(o)启迪$()的$(hex)咒术师$()。也没有其他意识能将自身的一部分抽离到这种程度了。$(br2)目前还没有。但他们会的。迟早会的。",
-            "2": "此外，如果该促动石能连接到其绑定对象，那么那种联系会覆盖虚意识的影响。$(br2)\
+            "2": "此外，如果该促动石能连接到其绑定对象，那种联系便会覆盖虚意识的影响。$(br2)\
 |                 没有意识的思维被绑在晶格上每段思维折叠覆盖尖啸着它不是它这很有道理这没有道理$(k)hello penguin$()$(br2)\
 |                 法术消耗大约 10 个$(media)充能紫水晶$()。"
         },
         "interop.hexal": {
             title: "咒法拓展-咒法组构学",
-            "1": "貌似我曾研究过的$(hex)咒法学$()的其他领域能和咒法组构学互相支撑。$(br2)\
+            "1": "貌似我曾研究过的$(hex)咒法学$()其他领域能和咒法组构学互相支撑。$(br2)\
 |                 首先，我发现，由$(l:hexbound:patterns/item_patterns#hexbound:get_main_hand)决斗士之纯化$()得来的$(l:hexbound:casting/item_iotas)物品 iota$() 和$(l:hexal:patterns/types#hexal:type/entity)外科医师之纯化$()得来的物品类型 iota 几乎一模一样！\
 |                 涉及它们两者或两者 iota 类型的操作应该都能正常执行。",
             "2": "其次（但也许这一点更为重要），我发现$(l:hexbound:patterns/constructs/constructs_intro)组构体$()也能维持$(l:hexal:patterns/spells/links)链接$()。这使得组构体可以和咒灵甚至我互相发送 iota！真是激发出了无限的可能性！"
@@ -242,7 +254,11 @@
 |                     尽管听起来很是令人兴奋，但能绘制的图案只要手动绘制就行了，任何不可能绘制出的图案也不大可能有什么有用之处。$(br)\
 |                     不过部分图案画在$(l:hexcasting:items/scroll)卷轴$()上还是挺美观的，也不是完全没用嘛！",
                 rotate: "移除栈顶图案和数，并旋转该图案所给数次。正数顺时针旋转，负数逆时针旋转。",
-                merge: "移除栈顶两个图案，并将其合并，就好像第二个图案的第一笔是从第一个图案收尾处开始的一样。似乎非常大的图案在此操作后会被从中间某一点截断。"
+                merge: "移除栈顶两个图案，并将其合并，就好像第二个图案的第一笔是从第一个图案收尾处开始的一样。似乎非常大的图案在此操作后会被从中间某一点截断。",
+                line_count: "移除栈顶图案，并返回其笔画数。",
+                start_dir: "移除栈顶图案，并返回一个代表其起始方向的数（取值0~5）。返回的数为 0 代表东北向，1 代表东向，并按顺时针递增。",
+                head: "移除栈顶图案和数。所给数取值下限为 1，上限为所给图案笔画数。返回由该图案中前该数个笔画组成的图案，且保留原图案的起始方向。",
+                tail: "移除栈顶图案和数。效果与起笔之馏化基本一致，但取的是图案倒数所给数个笔画。"
             },
             item_patterns: {
                 title: "物品图案",
@@ -260,11 +276,22 @@
             spells: {
                 colorizer_storage: {
                     title: "记忆染色剂",
-                    "1": "这一节的图案是我能记忆已经内化的$(thing)$(l:hexcasting:items/pigments)染色剂$()。$(br2)\
+                    "1": "这一节的图案能使我记忆已经内化的$(thing)$(l:hexcasting:items/pigments)染色剂$()。$(br2)\
 |                         绘制这些图案就能在我意识中将某染色剂和一个图案对应起来，只要愿意随时都能切换回去。再也不会缺蛋了！",
                     save: "移除栈顶图案，并将其与我当前的染色剂对应起来。",
                     load: "移除栈顶图案，并将我的染色剂设为该图案对应的染色剂。",
                     delete: "移除栈顶图案，并遗忘该图案对应的染色剂。"
+                },
+                shield: {
+                    title: "咒术护盾",
+                    "1": "在我对晶洞的研究以及游历世界的过程中，我发现身上到处都扎着箭会严重干扰我施放$(hex)咒术$()的过程。$(br2)\
+|                         本条目内介绍的图案则能以$(media)媒质$()的某种实体表现形式完全替代不好持握还脆弱的盾牌。",
+                    "2": "这种表现形式，或称$(hex)咒术护盾$()，能够格挡多数弹射物，但只会对从其朝向的方向射来的弹射物起效。\
+|                         此后拉弓射箭或投掷药水都不再需要担心被报复了。也有一点很奇怪，这些护盾也会影响到$(l:hexcasting:patterns/basics#hexcasting:raycast/entity)侦查员之馏化$()的效果，\
+|                         其检测结果会无视护盾，但仅限我与护盾朝向相同时才会如此。$(br2)似乎我最多只能同时维持 10 个咒术护盾。",
+                    normal: "移除位置向量，朝向向量和一正数，并在所给处以所给朝向创造一个咒术护盾，\
+|                            持续时间则为所给数秒。$(br)每秒持续时间消耗 2 个$(media)紫水晶粉$()。",
+                    glitchy: "创造一个不稳定的咒术护盾，其会时不时扭曲变形。此效果只是视觉效果。"
                 }
             },
             great_spells: {
