--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ hexal = "RxK71QKF"
 dynlights = "2.2.0+1.19.2"
 
 fake-player = "0.5.0"
-mixin-extras = "0.2.0-beta.3"
+mixin-extras = "0.2.0-beta.6"
 geckolib = "3.1.37"
 kettle = "2.2.1+1.19.2"
 
@@ -42,7 +42,7 @@ hexal = { module = "maven.modrinth:hexal", version.ref = "hexal" }
 dynlights = { module = "dev.lambdaurora:lambdynamiclights", version.ref = "dynlights" }
 
 fake-player = { module = "dev.cafeteria:fake-player-api", version.ref = "fake-player" }
-mixin-extras = { module = "com.github.LlamaLad7:MixinExtras", version.ref = "mixin-extras" }
+mixin-extras = { module = "com.github.llamalad7.mixinextras:mixinextras-fabric", version.ref = "mixin-extras" }
 geckolib = { module = "software.bernie.geckolib:geckolib-quilt-1.19", version.ref = "geckolib" }
 kettle = { module = "coffee.cypher.kettle:kettle", version.ref = "kettle" }
 
